--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
 		}
 	],
 	
-	"minimum-stability": "dev",
+	"minimum-stability": "stable",
 	"support": {
 		"source": "https://github.com/asinfotrack/yii2-wiki",
 		"issues": "https://github.com/asinfotrack/yii2-wiki/issues"
